--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,95 @@
-# TeamsFx files
-env/.env.*.user
-env/.env.local
-.DS_Store
-build
-appPackage/build
-
-# dependencies
+# Dependencies
 node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# misc
+# Environment variables
 .env
-.deployment
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Build outputs
+dist/
+build/
+*.tgz
+*.tar.gz
+
+# Logs
+logs
+*.log
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+.nyc_output
+
+# Dependency directories
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variables file
+.env
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
-# build
-lib/
+# Temporary files
+*.tmp
+*.temp
 
-# Local data
-.localConfigs.playground
+# Test results
+test-results/
+coverage/
+
+# Backup files
+backups/
+*.backup
+
+# Azure deployment files
+.azure/
+
+# Office Add-in specific
+*.pfx
+*.p12
+
+# Teams Bot specific
+bot-framework-emulator/
+
+# Documentation build
+docs/_build/
+
+# Local development
 .localConfigs
-.notification.localstore.json
-.notification.playgroundstore.json
-
-# Dev tool directories
-/devTools/
+.localConfigs.playground
